src/Entregable_3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    OR

Grammar

Rule 0     S' -> statement
Rule 1     statement -> usql_statement
Rule 2     statement -> sql_statement
Rule 3     usql_statement -> usql_select_statement
Rule 4     usql_statement -> usql_insert_statement
Rule 5     usql_statement -> usql_update_statement
Rule 6     usql_statement -> usql_delete_statement
Rule 7     usql_statement -> usql_alter_table_statement
Rule 8     sql_statement -> sql_select_statement
Rule 9     sql_statement -> sql_insert_statement
Rule 10    sql_statement -> sql_update_statement
Rule 11    sql_statement -> sql_delete_statement
Rule 12    sql_statement -> sql_alter_table_statement
Rule 13    usql_select_statement -> TRAEME select_elements DE_LA_TABLA table_reference optional_usql_join optional_usql_where optional_usql_group_by SEMICOLON
Rule 14    usql_insert_statement -> METE_EN IDENTIFIER LPAREN column_list RPAREN LOS_VALORES LPAREN value_list RPAREN SEMICOLON
Rule 15    usql_update_statement -> ACTUALIZA IDENTIFIER SETEA set_list optional_usql_where SEMICOLON
Rule 16    usql_delete_statement -> BORRA_DE_LA IDENTIFIER optional_usql_where SEMICOLON
Rule 17    usql_alter_table_statement -> CAMBIA_LA_TABLA IDENTIFIER alter_action_usql SEMICOLON
Rule 18    alter_action_usql -> AGREGA_LA_COLUMNA IDENTIFIER data_type nullable
Rule 19    alter_action_usql -> ELIMINA_LA_COLUMNA IDENTIFIER
Rule 20    data_type -> IDENTIFIER LPAREN NUMBER RPAREN
Rule 21    data_type -> VARCHAR LPAREN NUMBER RPAREN
Rule 22    nullable -> NO_NULO
Rule 23    nullable -> NOT_NULL
Rule 24    nullable -> empty
Rule 25    set_list -> assignment
Rule 26    set_list -> set_list COMMA assignment
Rule 27    assignment -> IDENTIFIER EQUALS value
Rule 28    select_elements -> TODO
Rule 29    select_elements -> LOS_DISTINTOS select_list
Rule 30    select_elements -> CONTANDO LPAREN TODO RPAREN
Rule 31    select_elements -> select_list
Rule 32    select_list -> IDENTIFIER
Rule 33    select_list -> select_list COMMA IDENTIFIER
Rule 34    table_reference -> IDENTIFIER
Rule 35    optional_usql_join -> MEZCLANDO table_reference EN condition
Rule 36    optional_usql_join -> empty
Rule 37    optional_usql_where -> DONDE condition
Rule 38    optional_usql_where -> empty
Rule 39    optional_usql_group_by -> AGRUPANDO_POR group_list WHERE_DEL_GROUP_BY condition
Rule 40    optional_usql_group_by -> GROUP_BY group_list HAVING condition
Rule 41    optional_usql_group_by -> AGRUPANDO_POR group_list
Rule 42    optional_usql_group_by -> GROUP_BY group_list
Rule 43    optional_usql_group_by -> empty
Rule 44    group_list -> IDENTIFIER
Rule 45    group_list -> IDENTIFIER COMMA IDENTIFIER
Rule 46    group_list -> group_list COMMA IDENTIFIER
Rule 47    column_list -> IDENTIFIER
Rule 48    column_list -> column_list COMMA IDENTIFIER
Rule 49    value_list -> value
Rule 50    value_list -> value_list COMMA value
Rule 51    value -> NUMBER
Rule 52    value -> STRING
Rule 53    condition -> expression comparator expression
Rule 54    condition -> expression BETWEEN expression AND expression
Rule 55    condition -> expression ENTRE expression Y expression
Rule 56    condition -> expression
Rule 57    expression -> IDENTIFIER
Rule 58    expression -> STRING
Rule 59    expression -> NUMBER
Rule 60    expression -> COUNT LPAREN ASTERISK RPAREN
Rule 61    expression -> IDENTIFIER DOT IDENTIFIER
Rule 62    comparator -> EQUALS
Rule 63    comparator -> GREATER_THAN
Rule 64    comparator -> LESS_THAN
Rule 65    comparator -> GE
Rule 66    comparator -> LE
Rule 67    comparator -> NE
Rule 68    empty -> <empty>
Rule 69    sql_select_statement -> SELECT select_elements_sql FROM table_reference optional_sql_join optional_sql_where optional_sql_group_by SEMICOLON
Rule 70    sql_insert_statement -> INSERT_INTO IDENTIFIER LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN SEMICOLON
Rule 71    sql_update_statement -> UPDATE IDENTIFIER SET set_list optional_sql_where SEMICOLON
Rule 72    sql_delete_statement -> DELETE_FROM IDENTIFIER optional_sql_where SEMICOLON
Rule 73    sql_alter_table_statement -> ALTER_TABLE IDENTIFIER alter_action_sql SEMICOLON
Rule 74    alter_action_sql -> ADD_COLUMN IDENTIFIER data_type nullable
Rule 75    alter_action_sql -> DROP_COLUMN IDENTIFIER
Rule 76    select_elements_sql -> ASTERISK
Rule 77    select_elements_sql -> DISTINCT select_list
Rule 78    select_elements_sql -> COUNT LPAREN ASTERISK RPAREN
Rule 79    select_elements_sql -> select_list
Rule 80    optional_sql_join -> JOIN IDENTIFIER ON condition
Rule 81    optional_sql_join -> empty
Rule 82    optional_sql_where -> WHERE condition
Rule 83    optional_sql_where -> empty
Rule 84    optional_sql_group_by -> GROUP_BY group_list HAVING condition
Rule 85    optional_sql_group_by -> empty

Terminals, with rules where they appear

ACTUALIZA            : 15
ADD_COLUMN           : 74
AGREGA_LA_COLUMNA    : 18
AGRUPANDO_POR        : 39 41
ALTER_TABLE          : 73
AND                  : 54
ASTERISK             : 60 76 78
BETWEEN              : 54
BORRA_DE_LA          : 16
CAMBIA_LA_TABLA      : 17
COMMA                : 26 33 45 46 48 50
CONTANDO             : 30
COUNT                : 60 78
DELETE_FROM          : 72
DE_LA_TABLA          : 13
DISTINCT             : 77
DONDE                : 37
DOT                  : 61
DROP_COLUMN          : 75
ELIMINA_LA_COLUMNA   : 19
EN                   : 35
ENTRE                : 55
EQUALS               : 27 62
FROM                 : 69
GE                   : 65
GREATER_THAN         : 63
GROUP_BY             : 40 42 84
HAVING               : 40 84
IDENTIFIER           : 14 15 16 17 18 19 20 27 32 33 34 44 45 45 46 47 48 57 61 61 70 71 72 73 74 75 80
INSERT_INTO          : 70
JOIN                 : 80
LE                   : 66
LESS_THAN            : 64
LOS_DISTINTOS        : 29
LOS_VALORES          : 14
LPAREN               : 14 14 20 21 30 60 70 70 78
METE_EN              : 14
MEZCLANDO            : 35
NE                   : 67
NOT_NULL             : 23
NO_NULO              : 22
NUMBER               : 20 21 51 59
ON                   : 80
OR                   : 
RPAREN               : 14 14 20 21 30 60 70 70 78
SELECT               : 69
SEMICOLON            : 13 14 15 16 17 69 70 71 72 73
SET                  : 71
SETEA                : 15
STRING               : 52 58
TODO                 : 28 30
TRAEME               : 13
UPDATE               : 71
VALUES               : 70
VARCHAR              : 21
WHERE                : 82
WHERE_DEL_GROUP_BY   : 39
Y                    : 55
error                : 

Nonterminals, with rules where they appear

alter_action_sql     : 73
alter_action_usql    : 17
assignment           : 25 26
column_list          : 14 48 70
comparator           : 53
condition            : 35 37 39 40 80 82 84
data_type            : 18 74
empty                : 24 36 38 43 81 83 85
expression           : 53 53 54 54 54 55 55 55 56
group_list           : 39 40 41 42 46 84
nullable             : 18 74
optional_sql_group_by : 69
optional_sql_join    : 69
optional_sql_where   : 69 71 72
optional_usql_group_by : 13
optional_usql_join   : 13
optional_usql_where  : 13 15 16
select_elements      : 13
select_elements_sql  : 69
select_list          : 29 31 33 77 79
set_list             : 15 26 71
sql_alter_table_statement : 12
sql_delete_statement : 11
sql_insert_statement : 9
sql_select_statement : 8
sql_statement        : 2
sql_update_statement : 10
statement            : 0
table_reference      : 13 35 69
usql_alter_table_statement : 7
usql_delete_statement : 6
usql_insert_statement : 4
usql_select_statement : 3
usql_statement       : 1
usql_update_statement : 5
value                : 27 49 50
value_list           : 14 50 70

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . usql_statement
    (2) statement -> . sql_statement
    (3) usql_statement -> . usql_select_statement
    (4) usql_statement -> . usql_insert_statement
    (5) usql_statement -> . usql_update_statement
    (6) usql_statement -> . usql_delete_statement
    (7) usql_statement -> . usql_alter_table_statement
    (8) sql_statement -> . sql_select_statement
    (9) sql_statement -> . sql_insert_statement
    (10) sql_statement -> . sql_update_statement
    (11) sql_statement -> . sql_delete_statement
    (12) sql_statement -> . sql_alter_table_statement
    (13) usql_select_statement -> . TRAEME select_elements DE_LA_TABLA table_reference optional_usql_join optional_usql_where optional_usql_group_by SEMICOLON
    (14) usql_insert_statement -> . METE_EN IDENTIFIER LPAREN column_list RPAREN LOS_VALORES LPAREN value_list RPAREN SEMICOLON
    (15) usql_update_statement -> . ACTUALIZA IDENTIFIER SETEA set_list optional_usql_where SEMICOLON
    (16) usql_delete_statement -> . BORRA_DE_LA IDENTIFIER optional_usql_where SEMICOLON
    (17) usql_alter_table_statement -> . CAMBIA_LA_TABLA IDENTIFIER alter_action_usql SEMICOLON
    (69) sql_select_statement -> . SELECT select_elements_sql FROM table_reference optional_sql_join optional_sql_where optional_sql_group_by SEMICOLON
    (70) sql_insert_statement -> . INSERT_INTO IDENTIFIER LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN SEMICOLON
    (71) sql_update_statement -> . UPDATE IDENTIFIER SET set_list optional_sql_where SEMICOLON
    (72) sql_delete_statement -> . DELETE_FROM IDENTIFIER optional_sql_where SEMICOLON
    (73) sql_alter_table_statement -> . ALTER_TABLE IDENTIFIER alter_action_sql SEMICOLON

    TRAEME          shift and go to state 14
    METE_EN         shift and go to state 15
    ACTUALIZA       shift and go to state 16
    BORRA_DE_LA     shift and go to state 17
    CAMBIA_LA_TABLA shift and go to state 18
    SELECT          shift and go to state 19
    INSERT_INTO     shift and go to state 20
    UPDATE          shift and go to state 21
    DELETE_FROM     shift and go to state 22
    ALTER_TABLE     shift and go to state 23

    statement                      shift and go to state 1
    usql_statement                 shift and go to state 2
    sql_statement                  shift and go to state 3
    usql_select_statement          shift and go to state 4
    usql_insert_statement          shift and go to state 5
    usql_update_statement          shift and go to state 6
    usql_delete_statement          shift and go to state 7
    usql_alter_table_statement     shift and go to state 8
    sql_select_statement           shift and go to state 9
    sql_insert_statement           shift and go to state 10
    sql_update_statement           shift and go to state 11
    sql_delete_statement           shift and go to state 12
    sql_alter_table_statement      shift and go to state 13

state 1

    (0) S' -> statement .



state 2

    (1) statement -> usql_statement .

    $end            reduce using rule 1 (statement -> usql_statement .)


state 3

    (2) statement -> sql_statement .

    $end            reduce using rule 2 (statement -> sql_statement .)


state 4

    (3) usql_statement -> usql_select_statement .

    $end            reduce using rule 3 (usql_statement -> usql_select_statement .)


state 5

    (4) usql_statement -> usql_insert_statement .

    $end            reduce using rule 4 (usql_statement -> usql_insert_statement .)


state 6

    (5) usql_statement -> usql_update_statement .

    $end            reduce using rule 5 (usql_statement -> usql_update_statement .)


state 7

    (6) usql_statement -> usql_delete_statement .

    $end            reduce using rule 6 (usql_statement -> usql_delete_statement .)


state 8

    (7) usql_statement -> usql_alter_table_statement .

    $end            reduce using rule 7 (usql_statement -> usql_alter_table_statement .)


state 9

    (8) sql_statement -> sql_select_statement .

    $end            reduce using rule 8 (sql_statement -> sql_select_statement .)


state 10

    (9) sql_statement -> sql_insert_statement .

    $end            reduce using rule 9 (sql_statement -> sql_insert_statement .)


state 11

    (10) sql_statement -> sql_update_statement .

    $end            reduce using rule 10 (sql_statement -> sql_update_statement .)


state 12

    (11) sql_statement -> sql_delete_statement .

    $end            reduce using rule 11 (sql_statement -> sql_delete_statement .)


state 13

    (12) sql_statement -> sql_alter_table_statement .

    $end            reduce using rule 12 (sql_statement -> sql_alter_table_statement .)


state 14

    (13) usql_select_statement -> TRAEME . select_elements DE_LA_TABLA table_reference optional_usql_join optional_usql_where optional_usql_group_by SEMICOLON
    (28) select_elements -> . TODO
    (29) select_elements -> . LOS_DISTINTOS select_list
    (30) select_elements -> . CONTANDO LPAREN TODO RPAREN
    (31) select_elements -> . select_list
    (32) select_list -> . IDENTIFIER
    (33) select_list -> . select_list COMMA IDENTIFIER

    TODO            shift and go to state 25
    LOS_DISTINTOS   shift and go to state 26
    CONTANDO        shift and go to state 28
    IDENTIFIER      shift and go to state 29

    select_elements                shift and go to state 24
    select_list                    shift and go to state 27

state 15

    (14) usql_insert_statement -> METE_EN . IDENTIFIER LPAREN column_list RPAREN LOS_VALORES LPAREN value_list RPAREN SEMICOLON

    IDENTIFIER      shift and go to state 30


state 16

    (15) usql_update_statement -> ACTUALIZA . IDENTIFIER SETEA set_list optional_usql_where SEMICOLON

    IDENTIFIER      shift and go to state 31


state 17

    (16) usql_delete_statement -> BORRA_DE_LA . IDENTIFIER optional_usql_where SEMICOLON

    IDENTIFIER      shift and go to state 32


state 18

    (17) usql_alter_table_statement -> CAMBIA_LA_TABLA . IDENTIFIER alter_action_usql SEMICOLON

    IDENTIFIER      shift and go to state 33


state 19

    (69) sql_select_statement -> SELECT . select_elements_sql FROM table_reference optional_sql_join optional_sql_where optional_sql_group_by SEMICOLON
    (76) select_elements_sql -> . ASTERISK
    (77) select_elements_sql -> . DISTINCT select_list
    (78) select_elements_sql -> . COUNT LPAREN ASTERISK RPAREN
    (79) select_elements_sql -> . select_list
    (32) select_list -> . IDENTIFIER
    (33) select_list -> . select_list COMMA IDENTIFIER

    ASTERISK        shift and go to state 35
    DISTINCT        shift and go to state 36
    COUNT           shift and go to state 38
    IDENTIFIER      shift and go to state 29

    select_elements_sql            shift and go to state 34
    select_list                    shift and go to state 37

state 20

    (70) sql_insert_statement -> INSERT_INTO . IDENTIFIER LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN SEMICOLON

    IDENTIFIER      shift and go to state 39


state 21

    (71) sql_update_statement -> UPDATE . IDENTIFIER SET set_list optional_sql_where SEMICOLON

    IDENTIFIER      shift and go to state 40


state 22

    (72) sql_delete_statement -> DELETE_FROM . IDENTIFIER optional_sql_where SEMICOLON

    IDENTIFIER      shift and go to state 41


state 23

    (73) sql_alter_table_statement -> ALTER_TABLE . IDENTIFIER alter_action_sql SEMICOLON

    IDENTIFIER      shift and go to state 42


state 24

    (13) usql_select_statement -> TRAEME select_elements . DE_LA_TABLA table_reference optional_usql_join optional_usql_where optional_usql_group_by SEMICOLON

    DE_LA_TABLA     shift and go to state 43


state 25

    (28) select_elements -> TODO .

    DE_LA_TABLA     reduce using rule 28 (select_elements -> TODO .)


state 26

    (29) select_elements -> LOS_DISTINTOS . select_list
    (32) select_list -> . IDENTIFIER
    (33) select_list -> . select_list COMMA IDENTIFIER

    IDENTIFIER      shift and go to state 29

    select_list                    shift and go to state 44

state 27

    (31) select_elements -> select_list .
    (33) select_list -> select_list . COMMA IDENTIFIER

    DE_LA_TABLA     reduce using rule 31 (select_elements -> select_list .)
    COMMA           shift and go to state 45


state 28

    (30) select_elements -> CONTANDO . LPAREN TODO RPAREN

    LPAREN          shift and go to state 46


state 29

    (32) select_list -> IDENTIFIER .

    COMMA           reduce using rule 32 (select_list -> IDENTIFIER .)
    DE_LA_TABLA     reduce using rule 32 (select_list -> IDENTIFIER .)
    FROM            reduce using rule 32 (select_list -> IDENTIFIER .)


state 30

    (14) usql_insert_statement -> METE_EN IDENTIFIER . LPAREN column_list RPAREN LOS_VALORES LPAREN value_list RPAREN SEMICOLON

    LPAREN          shift and go to state 47


state 31

    (15) usql_update_statement -> ACTUALIZA IDENTIFIER . SETEA set_list optional_usql_where SEMICOLON

    SETEA           shift and go to state 48


state 32

    (16) usql_delete_statement -> BORRA_DE_LA IDENTIFIER . optional_usql_where SEMICOLON
    (37) optional_usql_where -> . DONDE condition
    (38) optional_usql_where -> . empty
    (68) empty -> .

    DONDE           shift and go to state 50
    SEMICOLON       reduce using rule 68 (empty -> .)

    optional_usql_where            shift and go to state 49
    empty                          shift and go to state 51

state 33

    (17) usql_alter_table_statement -> CAMBIA_LA_TABLA IDENTIFIER . alter_action_usql SEMICOLON
    (18) alter_action_usql -> . AGREGA_LA_COLUMNA IDENTIFIER data_type nullable
    (19) alter_action_usql -> . ELIMINA_LA_COLUMNA IDENTIFIER

    AGREGA_LA_COLUMNA shift and go to state 53
    ELIMINA_LA_COLUMNA shift and go to state 54

    alter_action_usql              shift and go to state 52

state 34

    (69) sql_select_statement -> SELECT select_elements_sql . FROM table_reference optional_sql_join optional_sql_where optional_sql_group_by SEMICOLON

    FROM            shift and go to state 55


state 35

    (76) select_elements_sql -> ASTERISK .

    FROM            reduce using rule 76 (select_elements_sql -> ASTERISK .)


state 36

    (77) select_elements_sql -> DISTINCT . select_list
    (32) select_list -> . IDENTIFIER
    (33) select_list -> . select_list COMMA IDENTIFIER

    IDENTIFIER      shift and go to state 29

    select_list                    shift and go to state 56

state 37

    (79) select_elements_sql -> select_list .
    (33) select_list -> select_list . COMMA IDENTIFIER

    FROM            reduce using rule 79 (select_elements_sql -> select_list .)
    COMMA           shift and go to state 45


state 38

    (78) select_elements_sql -> COUNT . LPAREN ASTERISK RPAREN

    LPAREN          shift and go to state 57


state 39
